# NetSecOps

./: CMakeLists.txt  NetSecOps.pro  README.md  main.cpp  qml.qrc
.github/workflows/: build.yml  c-cpp.yml  main.yml
components/: Badge.qml  Button.qml  Card.qml  Input.qml  Progress.qml
pages/: Activity.qml  Credentials.qml  Dashboard.qml  NetworkDiscovery.qml  NetworkMap - Copy.qml  NetworkMap.qml  Operations.qml
qml/: MainLayout.qml  Navigation.qml  main.qml
src/: ActivityLogger.cpp  ActivityLogger.h  CredentialManager.cpp  CredentialManager.h  NetworkMapper.cpp  NetworkMapper.h  NetworkScanner.cpp  NetworkScanner.h  RemoteExecutor.cpp  RemoteExecutor.h  ScanResultsModel.cpp  ScanResultsModel.h
